Closed Bug 101452 Opened 24 years ago Closed 24 years ago

Too much of disk space for CCK Linux config.

Categories

(CCK Graveyard :: CCK-Installation, defect)

x86
Windows NT
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: shrutiv, Assigned: shrutiv)

Details

(Whiteboard: nsbranch+)

Attachments

(1 file)

This bug is to remove 2*27Mb space for Linux config. Should we mark this nsbranch+? Amount of disk space while creating a Linux configuration: Linux installer tar file = 27MB Expanding the Linux installer tar file = 2*27 MB For each individual configuration = 3*27 MB The above 6 *27Mb is the total space involved for creating a Linux configuration for the first time. Once, the configuration is completely created the total amount of disk space used is 3*27Mb, that is we delete the other 3*27Mb. This huge amount of disk space consumption was introduced to support different platforms. We will definetely need 4*27Mb space, but we can avoid 2*27Mb.
This is a great deal of disk space, but I don't think we should devote any time to fixing this problem unless we hear from cutomers that it is a problem or if there is an *extremely* easy and low risk fix we can think of quickly. The number of ISPs who will want to distribute N6.x for Linux is low (will be more important when we support international builds, but even then it will still be a low percentage), and the ones that do can probably manage our current disk size requirements. We have an advantage vs IE by having and supporting Linux at all - that is sufficient by itself. I recommend that we keep this bug on the "Out list" for 6.2 and beyond until we have strong data that we should fix this.
> or if there is an *extremely* easy and low risk fix we can think of quickly. There is an easy and low risk fix. If Shruti reapplies her original patch, then this will address this space problem. She changed the implementation because it was believed to cause the problem with failing on some Windows host platforms. But it turned out to be caused by something else. Unless QA believes this will cause a large amount of extra work, we should make this fix.
I don't think this would be a huge amount of extra work. And easy check would be to create a partition on the hard disk at the max size we think CCK would need, and place CCK on that partition. If it runs out of space, we have a problem. If not, then it works.
Marking nsbranch+
Status: NEW → ASSIGNED
Whiteboard: nsbranch+
Whiteboard: nsbranch+ → nsbranch+ need r=
Comment on attachment 50992 [details] [diff] [review] Patch: Reducing disk space from 6*27Mb to 4*27Mb r=tao
Sean, Here is the updated Linux disk space requirements: 1. Linux Netscape 6.2 installer (tar) file = 27MB 2. Expanded Linux Netscape 6.2 files (extracted from (1))= 27 MB 3. Customized Linux configuration files (created by CCK) = 2 x 27 MB 4. Each additional Customized Linux files (created by CCK) = 2 x 27MB So to create a single customized Linux requires 4 x 27MB. Note: After installing CCK, the user can delete (1) to save 27MB. Shruti, Please confirm the above.
> Note: After installing CCK, the user can delete (1) to save 27MB. To be more precise, after (2), CCK no longer needs (1) and it can be deleted to save 27MB.
(3) is an extra step. Does (3) mean the first configuration, (4) - the second configuration, etc. updated Linux disk space requirements: 1. Linux Netscape 6.2 installer (tar) file = 27MB 2. Expanded Linux Netscape 6.2 files (extracted from (1))= 27 MB 3. Each Linux configuration created by CCK = 2 x 27 MB (Note: this is in addition to what it takes for each Windows configuration)
Marking fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: nsbranch+ need r= → nsbranch+
> (3) is an extra step. > Does (3) mean the first configuration, (4) - the second configuration, etc. Yes, that is what I meant. I was trying to distinguish what was minimal and what was optional. Sean, Please wordsmith it as you see best.
verified on build 2001-10-03-09
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: