Fix for bug 101452: Too much of disk space for CCK Linux config (r=tao) Removing gzip command